--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ ext {
     googleVersion = '26.1.0'
     retrofitVersion = '2.2.0'
     rxjavaVersion = '2.0.1'
-
-}
+    room_version = '1.1.1'
+   }
 
 
 
@@ -55,7 +55,11 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
 
-
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    implementation "android.arch.persistence.room:guava:$room_version"
+    
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
